// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING SectionHeading component GIVEN an empty RightContent WHEN the SectionHeading component is rendered in snapshot testing THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 border-slate-400 text-gray-700 flex justify-between items-end md:p-2"
  >
    <h2
      class="uppercase font-medium font-comfortaa tracking-[0.375rem] "
    >
      Sample Heading
    </h2>
    <span />
  </div>
</DocumentFragment>
`;

exports[`TESTING SectionHeading component GIVEN valid props WHEN the SectionHeading component is rendered in snapshot testing THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 border-slate-400 text-gray-700 flex justify-between items-end md:p-2"
  >
    <h2
      class="uppercase font-medium font-comfortaa tracking-[0.375rem] "
    >
      Sample Heading
    </h2>
    <span>
      <div>
        Right Content
      </div>
    </span>
  </div>
</DocumentFragment>
`;
